Added 2 more fragments for help

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,26 +10,19 @@
             android:id="@+id/nav_flip"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Flip Mode" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_help_swipe"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Help Swipe Mode" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_help_flip"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Help Flip Mode" />
         </menu>
     </item>
 
