Added new intent for settings

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,4 +7,6 @@
         android:title="Set Count"/>
     <item  android:id="@+id/check"
         android:title="Check Count"/>
+    <item  android:id="@+id/settings"
+        android:title="Settings"/>
 </menu>
